# learn-cmake

./: README.md
HelloWorld/: CMakeLists.txt  README.md  main.cpp
test01/: CMakeLists.txt  README.md  main.cpp
test01/math/: CMakeLists.txt  adder.h  sub.h
